--- a/src/index.html
+++ b/src/index.html
@@ -4,5 +4,18 @@
   <title>Blank</title>
 </head>
 <body>
+  <main>
+    <div id="enterField">
+      <input type="text">
+      <button id="refresh">Refresh</button>
+    </div>
+    <div id="counterField">
+      <div id="cylOne"></div>
+      <div id="cylTwo"></div>
+      <div id="cylThree"></div>
+    </div>
+    <div id="outputField">
+      <div id="output"></div>
+    </div>
+  </main>
 </body>
-</html>
